# settings/swagger.yaml
@@ -469,6 +469,70 @@ paths:
         200:
           description: ""
 
+  /portfolios:
+    get:
+      summary: "index"
+      parameters:
+        - $ref: '#/components/parameters/page_offset'
+        - $ref: '#/components/parameters/page_limit'
+        - name: sort
+          in: query
+          required: false
+          schema:
+            type: string
+          description: "updatedAt, -updatedAt"
+          example: -updatedAt      
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: ""
+    post:
+      summary: "create"
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/portfolio'
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ico'
+
+  /portfolios/{id}:
+    parameters:
+      - $ref: '#/components/parameters/id'
+    get:
+      summary: "show"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: ""
+    put:
+      summary: "update"
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/portfolio'
+      responses:
+        200:
+          description: ""
+    delete:
+      summary: "delete"
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: ""          
+
   /videos:
     get:
       summary: "index"
@@ -525,6 +589,12 @@ paths:
       responses:
         200:
           description: ""
+  /tickers/special:
+    get:
+      summary: "special"
+      responses:
+        200:
+          description: ""          
 
   /auth/token:
     put:
@@ -982,6 +1052,11 @@ components:
             image: "http://url.com/image.jpg"
             publish: false
             publishAt: ""
+
+    portfolio:
+      properties:
+        publish:
+          type: boolean    
 
     video:
       properties:
